--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,79 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    --secondary-color: #FA8305;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+    font-family: poppins_bold;
+    src: url(./assets/fonts/Poppins-Bold.ttf);
+    font-weight: 700;
+    font-style: normal;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+@font-face {
+    font-family: poppins_medium;
+    src: url(./assets/fonts/Poppins-Medium.ttf);
+    font-weight: 700;
+    font-style: normal;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.fixed_font1 {
+    font-family: poppins_bold;
+}
+  
+.fixed_font2 {
+    font-family: poppins_medium;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.fixed_size1 {
+    font-family: poppins_bold;
+    font-size: 36px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.fixed_size2 {
+    font-family: poppins_medium;
+    font-size: 20px;
+}
+
+.fixed_size3 {
+    font-family: poppins_medium;
+    font-size: 15px;
+}
+
+.fixed_size4 {
+    font-family: poppins_medium;
+    font-size: 27px;
+}
+
+.btn1 {
+    background-color: var(--secondary-color);
+}
+
+.btn2 {
+    background-color: transparent;
+}
+
+p {
+    font-family: poppins_bold;
+    font-size: 20px;
+    color: var(--secondary-color);
+}
+
+input {
+    background-color: transparent;
+    border: solid black;
+}
+
+input:focus {
+    outline: none;
+}
+
+::placeholder {
+    color: white;
+}
+
+.cell {
+    font-family: poppins_Bold;
+    font-size: 128px;
+    height: 175px;
+    width: 175px;
 }
